api: add bearer api security
